--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RR30Y16SLS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RR30Y16SLS');
+</script>
     <title>Ajinkya Jadhav</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
